@@ -4,6 +4,8 @@
 	* win/tkWinInit.c:    re-write TkpDisplayWarning not to use any Tcl functions
 	any more. This allows TkpDisplayWarning to be used as panic proc.
 	* win/winMain.c:      use TkpDisplayWarning as panic proc on Windows.
+	* generic/tkMain.c:   Remove unused strrchr, combine outChannel/errChannel
+	variables to a single variable
 
 2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>
 
